# filemaster

./: .gitignore  AGENTS.md  PHASE_1_1_COMPLETE.md  README.md  URLS_AND_USAGE.md  admin_views.py  app.py  fastapi_app.py  fastapi_models.py  filemaster.db  models.py  pyproject.toml  requirements.txt  test_customer_flow.py  test_request.py
app/: __init__.py  main.py  models.py  settings.py
app/modules/: __init__.py
app/modules/drivers_license/: __init__.py  handler.py
app/modules/sample_module/: __init__.py  handler.py
app/modules/ssn/: __init__.py  handler.py  test_ssn_module.py
app/utils/: __init__.py  data_viewer.py  database.py  encryption.py  file_orchestrator.py
docs/: setup.md
handlers/: base.py  drivers_license_handler.py  file_handler.py  form_handler.py  insurance_card_handler.py
instance/: filemaster.db  filemaster_old.db
migrations/versions/: 09a08d6fa0c2_add_module_data.py  232fd1c975ea_add_front_back_paths.py  3fe570611070_initial.py  51d4dc079555_add_access_log_model.py  add_result_data.py
static/: customer.html  index.html  new_request.html  style.css
static/js/: create_request.js
templates/: admin_create_template.html  admin_edit_request.html  admin_logs.html  admin_request_detail.html  admin_request_detail_with_nav.html  admin_requests.html  base.html  demo.html  index.html  request.html
templates/modules/: driver_license.html  drivers_license.html  file.html  form.html  insurance_card.html
uploads/: .gitkeep  b1930094eae44cdb8d141dce5ecfa419_front_52B85D6B-0948-436B-9126-5F59449DEE59.HEIC
