[tool.poetry]
name = "filemaster"
version = "0.1.0"
description = "Modular customer document collection platform"
authors = ["Auto AI <ai@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
SQLAlchemy = "*"
cryptography = "*"
pydantic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
